// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse complex grammar (num+num) 1`] = `
"
<Root>
|  <Expr>
|  |  <Term>
|  |  |  <Factor>
|  |  |  |  <(><(>(</(></(>
|  |  |  |  <Expr>
|  |  |  |  |  <Term>
|  |  |  |  |  |  <Factor>
|  |  |  |  |  |  |  <num><num>num</num></num>
|  |  |  |  |  |  </Factor>
|  |  |  |  |  |  <TermP>
|  |  |  |  |  |  |  <ϵ>undefined</ϵ>
|  |  |  |  |  |  </TermP>
|  |  |  |  |  </Term>
|  |  |  |  |  <ExprP>
|  |  |  |  |  |  <+><+>+</+></+>
|  |  |  |  |  |  <Term>
|  |  |  |  |  |  |  <Factor>
|  |  |  |  |  |  |  |  <num><num>num</num></num>
|  |  |  |  |  |  |  </Factor>
|  |  |  |  |  |  |  <TermP>
|  |  |  |  |  |  |  |  <ϵ>undefined</ϵ>
|  |  |  |  |  |  |  </TermP>
|  |  |  |  |  |  </Term>
|  |  |  |  |  |  <ExprP>
|  |  |  |  |  |  |  <ϵ>undefined</ϵ>
|  |  |  |  |  |  </ExprP>
|  |  |  |  |  </ExprP>
|  |  |  |  </Expr>
|  |  |  |  <)><)>)</)></)>
|  |  |  </Factor>
|  |  |  <TermP>
|  |  |  |  <ϵ>undefined</ϵ>
|  |  |  </TermP>
|  |  </Term>
|  |  <ExprP>
|  |  |  <ϵ>undefined</ϵ>
|  |  </ExprP>
|  </Expr>
</Root>
"
`;

exports[`parse complex grammar num+num 1`] = `
"
<Root>
|  <Expr>
|  |  <Term>
|  |  |  <Factor>
|  |  |  |  <num><num>num</num></num>
|  |  |  </Factor>
|  |  |  <TermP>
|  |  |  |  <ϵ>undefined</ϵ>
|  |  |  </TermP>
|  |  </Term>
|  |  <ExprP>
|  |  |  <+><+>+</+></+>
|  |  |  <Term>
|  |  |  |  <Factor>
|  |  |  |  |  <num><num>num</num></num>
|  |  |  |  </Factor>
|  |  |  |  <TermP>
|  |  |  |  |  <ϵ>undefined</ϵ>
|  |  |  |  </TermP>
|  |  |  </Term>
|  |  |  <ExprP>
|  |  |  |  <ϵ>undefined</ϵ>
|  |  |  </ExprP>
|  |  </ExprP>
|  </Expr>
</Root>
"
`;

exports[`parse complex grammar num+num+(num-num) 1`] = `
"
<Root>
|  <Expr>
|  |  <Term>
|  |  |  <Factor>
|  |  |  |  <num><num>num</num></num>
|  |  |  </Factor>
|  |  |  <TermP>
|  |  |  |  <ϵ>undefined</ϵ>
|  |  |  </TermP>
|  |  </Term>
|  |  <ExprP>
|  |  |  <+><+>+</+></+>
|  |  |  <Term>
|  |  |  |  <Factor>
|  |  |  |  |  <num><num>num</num></num>
|  |  |  |  </Factor>
|  |  |  |  <TermP>
|  |  |  |  |  <ϵ>undefined</ϵ>
|  |  |  |  </TermP>
|  |  |  </Term>
|  |  |  <ExprP>
|  |  |  |  <+><+>+</+></+>
|  |  |  |  <Term>
|  |  |  |  |  <Factor>
|  |  |  |  |  |  <(><(>(</(></(>
|  |  |  |  |  |  <Expr>
|  |  |  |  |  |  |  <Term>
|  |  |  |  |  |  |  |  <Factor>
|  |  |  |  |  |  |  |  |  <num><num>num</num></num>
|  |  |  |  |  |  |  |  </Factor>
|  |  |  |  |  |  |  |  <TermP>
|  |  |  |  |  |  |  |  |  <ϵ>undefined</ϵ>
|  |  |  |  |  |  |  |  </TermP>
|  |  |  |  |  |  |  </Term>
|  |  |  |  |  |  |  <ExprP>
|  |  |  |  |  |  |  |  <-><->-</-></->
|  |  |  |  |  |  |  |  <Term>
|  |  |  |  |  |  |  |  |  <Factor>
|  |  |  |  |  |  |  |  |  |  <num><num>num</num></num>
|  |  |  |  |  |  |  |  |  </Factor>
|  |  |  |  |  |  |  |  |  <TermP>
|  |  |  |  |  |  |  |  |  |  <ϵ>undefined</ϵ>
|  |  |  |  |  |  |  |  |  </TermP>
|  |  |  |  |  |  |  |  </Term>
|  |  |  |  |  |  |  |  <ExprP>
|  |  |  |  |  |  |  |  |  <ϵ>undefined</ϵ>
|  |  |  |  |  |  |  |  </ExprP>
|  |  |  |  |  |  |  </ExprP>
|  |  |  |  |  |  </Expr>
|  |  |  |  |  |  <)><)>)</)></)>
|  |  |  |  |  </Factor>
|  |  |  |  |  <TermP>
|  |  |  |  |  |  <ϵ>undefined</ϵ>
|  |  |  |  |  </TermP>
|  |  |  |  </Term>
|  |  |  |  <ExprP>
|  |  |  |  |  <ϵ>undefined</ϵ>
|  |  |  |  </ExprP>
|  |  |  </ExprP>
|  |  </ExprP>
|  </Expr>
</Root>
"
`;
